src/css/_box.scss
// TRIP CARD

.box {
  display: grid;
  grid-template-rows: 35% 65%;
  width: 23vw;
  height: 35vw;
  border-radius: 3px;
  box-shadow: $shadow-heavy;
}

.box-top {
  display: grid;
  grid-template-rows: 50% 50%;
  padding: 1%;
  border-radius: 3px 3px 0 0;
  background-color: rgba(244, 119, 41, 0.79);
}

.arrow {
  background-repeat: no-repeat;
  width: 3vw;
  height: 3vw;
  padding: 5% 0 0 5%;
}

.box-top-lower {
  display: flex;
  justify-content: center;
  align-items: flex-end;
  margin-bottom: 3%;
  font-size: 1.5vw;
  font-weight: bold;
}

.box-bottom {
  display: grid;
  grid-template-rows: 23% 23% 23% 23%;
  // justify-content: flex-start;
  align-items: space-between;
  padding: 1.5vw;
  border-radius: 0 0 3px 3px;
  background-color: rgba(228, 248, 254, 0.941);
}

.travel-info {
  flex-direction: column;
  // justify-content: center;
  // align-items: center;
  width: 100%;
  margin: 5% 2% 3% 2%;
}

.data-small {
  font-size: 1vw;
  // margin-bottom: 0.25vw;
  color: rgb(57, 44, 28)
}

